# librolibero

./: .claudeignore  .copilotignore  .cursorignore  .geminiignore  .gitignore  LEIAME.md  README.md  plano_gui.md  pyproject.toml  requirements.txt
librolibero/: __init__.py  __main__.py  cli.py  config.py  metadata.py  report.py  scanner.py  zotero_client.py
librolibero/gui/: __init__.py  app.py  config_view.py  progress_view.py  resources.py  scanner_view.py  worker.py
packaging/: README.md  build.bat  build.sh  entrypoint_gui.py  librolibero.spec  make_icons.py
