[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "librolibero"
version = "0.1.0"
description = "Importador ISBN → Zotero para rastrear PDFs/EPUBs em pasta books/"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "José Henrique Padovani"}
]
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzotero",
    "isbnlib",
    "pymupdf",
    "ebooklib",
    "requests",
    "tomli",
    "python-dotenv",
    "PySide6"
]

[project.scripts]
librolibero = "librolibero.__main__:main"
